IntervalMap performance improve fix. Warnings with generic types were fixed.